# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/shaders/: 2.2.basic_lighting.frag  2.2.basic_lighting.vert  3.1.2.shadow_mapping.frag  3.2.2.point_shadows.frag
assets/shaders/default/: 1.model_loading.frag  2.2.basic_lighting.frag  2.2.basic_lighting.vert
src/: Camera.h  Light.h  Material.h  Mesh.h  Model.h  Shader.h
